adding the new xml file

--- a/gitpowerhouse/test-output/old/Default suite/classes.html
+++ b/gitpowerhouse/test-output/old/Default suite/classes.html
@@ -4,21 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.powerhouse.testcases.ActiveCampaignPurchase</td>
+<td>com.powerhouse.testcases.RegistrationAndLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f</td>
+<td>loginPowerhouse</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>beforeClass</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -27,6 +27,14 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterClass</td>
+<td>&nbsp;</td></tr>
 </table>
