--- a/gitpowerhouse/test-output/old/Default suite/methods-alphabetical.html
+++ b/gitpowerhouse/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7a4e4">  <td>17/10/16 18:41:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActiveCampaignPurchase.f()[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@3bfdc050]">f</td> 
+<tr bgcolor="c7a4e4">  <td>18/01/03 15:53:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationAndLogin.beforeClass()[pri:0, instance:com.powerhouse.testcases.RegistrationAndLogin@5c3bd550]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>18/01/03 15:54:05</td>   <td>20659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationAndLogin.loginPowerhouse()[pri:0, instance:com.powerhouse.testcases.RegistrationAndLogin@5c3bd550]">loginPowerhouse</td> 
   <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>18/01/03 15:54:22</td>   <td>38458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegistrationAndLogin.tearDown(org.testng.ITestResult)[pri:0, instance:com.powerhouse.testcases.RegistrationAndLogin@5c3bd550]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
 </table>
