--- a/gitpowerhouse/test-output/old/Parallel Tests/methods-alphabetical.html
+++ b/gitpowerhouse/test-output/old/Parallel Tests/methods-alphabetical.html
@@ -1,28 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Parallel Tests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98674">  <td>17/10/16 19:48:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PowerSiteUpgradeGold.afterClass()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1834354612</td>   <td></td> </tr>
-<tr bgcolor="70b3e1">  <td>17/10/16 19:47:52</td>   <td>-44610</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeClass(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@402a079c]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@833248912</td>   <td></td> </tr>
-<tr bgcolor="70b3e1">  <td>17/10/16 19:48:21</td>   <td>-15143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeMethod()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@402a079c]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG@833248912</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>17/10/16 19:48:37</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginWithDifferentOption.executeAfterMethod()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@490ab905]">&lt;&lt;executeAfterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG@21788156</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/10/16 19:48:23</td>   <td>-13870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActiveCampaignPurchase.f()[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@42d80b78]">f</td> 
-  <td>TestNG@1735189001</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>17/10/16 19:48:25</td>   <td>-11987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PowerSiteUpgradeGold.f()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">f</td> 
-  <td>TestNG@1834354612</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>17/10/16 19:48:27</td>   <td>-9787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithDifferentOption.faceBook()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@490ab905]">faceBook</td> 
-  <td>TestNG@21788156</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>17/10/16 19:48:37</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithDifferentOption.google()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@490ab905]">google</td> 
-  <td>TestNG@21788156</td>   <td></td> </tr>
-<tr bgcolor="70b3e1">  <td>17/10/16 19:48:50</td>   <td>13094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchasePowersiteSubscription.purchsepowersite()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@402a079c]">purchsepowersite</td> 
-  <td>TestNG@833248912</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>17/10/16 19:47:52</td>   <td>-44610</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginWithDifferentOption.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@490ab905]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@21788156</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>17/10/16 19:47:52</td>   <td>-44610</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PowerSiteUpgradeGold.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1834354612</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/10/16 19:47:52</td>   <td>-44610</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ActiveCampaignPurchase.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@42d80b78]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1735189001</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:52:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PowerSiteUpgradeGold.afterClass()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:52:48</td>   <td>12080</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PowerSiteUpgradeGold.afterClass()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@77cd7a0]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:50:35</td>   <td>-120969</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeClass(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@6a41eaa2]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:50:56</td>   <td>-100672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeClass(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@73ad2d6]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:50:56</td>   <td>-100676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeMethod()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@6a41eaa2]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:51:20</td>   <td>-76110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PurchasePowersiteSubscription.beforeMethod()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@73ad2d6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:52:54</td>   <td>18149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginWithDifferentOption.executeAfterMethod()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@7085bdee]">&lt;&lt;executeAfterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:53:34</td>   <td>57642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginWithDifferentOption.executeAfterMethod()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@1a968a59]">&lt;&lt;executeAfterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/08 14:50:16</td>   <td>-140226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActiveCampaignPurchase.f()[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@1ce92674]">f</td> 
+  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/08 14:50:23</td>   <td>-133209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActiveCampaignPurchase.f()[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@4667ae56]">f</td> 
+  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:51:46</td>   <td>-50267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PowerSiteUpgradeGold.f()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@77cd7a0]">f</td> 
+  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:52:25</td>   <td>-11011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PowerSiteUpgradeGold.f()[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">f</td> 
+  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:52:54</td>   <td>18142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithDifferentOption.faceBook()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@7085bdee]">faceBook</td> 
+  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:53:17</td>   <td>41094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithDifferentOption.faceBook()[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@1a968a59]">faceBook</td> 
+  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:51:20</td>   <td>-76107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchasePowersiteSubscription.purchsepowersite()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@6a41eaa2]">purchsepowersite</td> 
+  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>17/11/08 14:51:27</td>   <td>-69235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchasePowersiteSubscription.purchsepowersite()[pri:0, instance:com.powerhouse.testcases.PurchasePowersiteSubscription@73ad2d6]">purchsepowersite</td> 
+  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/08 14:49:56</td>   <td>-160068</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ActiveCampaignPurchase.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@4667ae56]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/08 14:49:56</td>   <td>-160068</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ActiveCampaignPurchase.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.ActiveCampaignPurchase@1ce92674]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:51:20</td>   <td>-76105</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PowerSiteUpgradeGold.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@77cd7a0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>17/11/08 14:51:27</td>   <td>-69230</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PowerSiteUpgradeGold.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.PowerSiteUpgradeGold@5700d6b1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:52:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginWithDifferentOption.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@7085bdee]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1043574253</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/11/08 14:52:48</td>   <td>12080</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginWithDifferentOption.setUp(java.lang.String)[pri:0, instance:com.powerhouse.testcases.LoginWithDifferentOption@1a968a59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@428501787</td>   <td></td> </tr>
 </table>
