--- a/gitpowerhouse/test-output/old/Parallel Tests/toc.html
+++ b/gitpowerhouse/test-output/old/Parallel Tests/toc.html
@@ -8,12 +8,12 @@
 <h3><p align="center">Results for<br/><em>Parallel Tests</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>4 tests</td>
+<td>2 tests</td>
 <td><a target='mainFrame' href='classes.html'>4 classes</a></td>
-<td>5 methods:<br/>
+<td>8 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,32 +22,16 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>power house LoginWithDifferentOption (0/1/1)</td><td valign='top' align='right'>
-  <a href='power house LoginWithDifferentOption.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>power house testcases with chrome (0/3/1)</td><td valign='top' align='right'>
+  <a href='power house testcases with chrome.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>power house PowerSiteUpgradeGold (0/1/0)</td><td valign='top' align='right'>
-  <a href='power house PowerSiteUpgradeGold.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>power house with firefox (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>power house with firefox (1/2/1)</td><td valign='top' align='right'>
   <a href='power house with firefox.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>power house PurchasePowersiteSubscription purchase (0/0/1)</td><td valign='top' align='right'>
-  <a href='power house PurchasePowersiteSubscription purchase.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
